--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,9 +23,14 @@ jobs:
             package-lock.json
             apps/pwa/package-lock.json
 
-      - name: Install root deps (optional)
+      - name: Print layout (debug)
         run: |
-          if [ -f package-lock.json ]; then npm ci; else echo "No root lockfile"; fi
+          pwd
+          ls -la
+          echo "--- apps/pwa ---"
+          ls -la apps/pwa || true
+          echo "--- firebase.json ---"
+          cat firebase.json
 
       - name: Install deps (apps/pwa)
         run: npm --prefix apps/pwa ci || npm --prefix apps/pwa install
